# deribit-fix

./: .env.example  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  codecov.yml
.github/workflows/: build.yml  code_coverage.yml  format_check.yml  lint.yml  semver.yml  tests.yml
doc/: FIX_IMPLEMENTED_MESSAGES.md  FIX_TAGS_COVERAGE.md  README.md
doc/01_project_overview/: main.md
doc/01_project_overview/architecture/: configuration.md  data_flow.md  error_handling.md  main.md  module_structure.md
doc/01_project_overview/installation/: installing_from_crates.md  installing_from_source.md  main.md
doc/01_project_overview/usage/: advanced_example.md  basic_example.md  main.md
doc/02_api_reference/: enhanced_features.md  main.md
doc/02_api_reference/enums/: fix_enums.md  main.md  status_enums.md  trading_enums.md
doc/02_api_reference/functions/: client_functions.md  config_functions.md  main.md  utility_functions.md
doc/02_api_reference/modules/: client.md  config.md  error.md  lib.md  main.md  message.md  types.md
doc/02_api_reference/structs/: config.md  deribit_fix_client.md  execution_report.md  fix_message.md  instrument.md  main.md  market_data.md  order.md  order_book.md  order_validation_config.md  position.md  risk_limits.md  trading_hours.md
doc/02_api_reference/traits/: connection.md  main.md  market_data_handler.md  message_handler.md  order_handler.md  position_handler.md  session_manager.md
doc/03_development_guide/: main.md
doc/03_development_guide/changelog/: main.md
doc/03_development_guide/contributing/: main.md
doc/03_development_guide/testing/: benchmarking.md  integration_testing.md  main.md  mock_testing.md  test_utilities.md  unit_testing.md
examples/basic/: Cargo.toml
examples/error_handling/: Cargo.toml  error_handling.rs  reject_example.rs
examples/market_data/: Cargo.toml  market_data_streaming.rs
examples/order_management/: Cargo.toml  order_management.rs
examples/position_management/: Cargo.toml  position_management.rs
examples/session/: Cargo.toml  heartbeat_example.rs  login_test.rs  resend_request_example.rs  session_management.rs  test_request_example.rs
src/: constants.rs  lib.rs  macros.rs  prelude.rs  utils.rs
src/client/: fix_client.rs  mod.rs
src/config/: base.rs  mod.rs  utils.rs
src/connection/: mod.rs  tcp_connection.rs
src/error/: mod.rs
src/message/: admin.rs  builder.rs  market_data.rs  mod.rs  positions.rs  security_definition.rs  security_list.rs  security_status.rs
src/message/orders/: cancel_reject.rs  cancel_replace_request.rs  cancel_request.rs  execution_report.rs  mass_cancel.rs  mass_status.rs  mod.rs  new_order.rs
src/message/quotes/: mass_quote.rs  mass_quote_acknowledgement.rs  mod.rs  quote_cancel.rs  quote_request.rs  quote_request_reject.rs  quote_status_report.rs  rfq_request.rs
src/message/risk/: mm_protection_limits.rs  mm_protection_limits_result.rs  mm_protection_reset.rs  mod.rs
src/message/trade/: mod.rs  trade_capture_report.rs  trade_capture_report_request.rs  trade_capture_report_request_ack.rs
src/message/user/: mod.rs  user_request.rs  user_response.rs
src/model/: currency.rs  instrument.rs  message.rs  mod.rs  order.rs  position.rs  request.rs  stream.rs  tags.rs  types.rs
src/session/: fix_session.rs  mod.rs
src/types/: mod.rs
src/utils/: logger.rs  mod.rs
tests/: lib.rs
tests/integration/: mod.rs  orders_integration_tests.rs
tests/integration/error_handling/: business_level_rejects.rs  mod.rs  session_level_rejects.rs
tests/integration/market_data/: market_data_rejection.rs  market_data_snapshot.rs  market_data_streaming.rs  mod.rs  multiple_streams.rs  trade_data_streaming.rs
tests/integration/order_management/: execution_report_validation.rs  mass_order_operations.rs  mod.rs  new_order_single.rs  order_cancellation.rs  order_field_validation.rs  order_rejection.rs
tests/integration/position_management/: empty_positions_report.rs  mod.rs  request_for_positions.rs  trade_capture_report.rs
tests/integration/reference_data/: mod.rs  security_list_request.rs  security_status.rs
tests/integration/scenarios/: full_trade_lifecycle.rs  mod.rs
tests/integration/session/: authentication_failures.rs  connection_recovery.rs  heartbeat_and_liveness.rs  logon_logout.rs  mod.rs  sequence_management.rs
tests/integration/ssl/: mod.rs  ssl_connectivity.rs
tests/unit/: mod.rs
tests/unit/client/: fix_client_tests.rs  mod.rs
tests/unit/config/: base.rs  mod.rs  utils.rs
tests/unit/connection/: fix_connection_tests.rs  mod.rs  tcp_connection_tests.rs
tests/unit/error/: fix_error_tests.rs  mod.rs
tests/unit/message/: admin_tests.rs  builder_tests.rs  mod.rs
tests/unit/model/: debug_tests.rs  message_tests.rs  mod.rs  stream_tests.rs  types_tests.rs
tests/unit/session/: auth_tests.rs  fix_session_tests.rs  mod.rs
