[package]
name = "deribit-fix"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "This crate provides a client for the Deribit Markets API using the FIX protocol."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/deribit-fix"
homepage = "https://github.com/joaquinbejar/deribit-fix"
keywords = ["finance", "ohlc", "tick", "trading"]
categories = ["finance", "data-structures"]

include = [
    "benches/**/*",
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*",
    "tests/**/*",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*",
    "Docker/**/*",
]

[dependencies]
deribit-base = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 =  { workspace = true }
tokio-native-tls =  { workspace = true }
native-tls =  { workspace = true }


[[test]]
name = "unit_tests"
path = "tests/unit/mod.rs"


[lib]
name = "deribit_fix"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"

[workspace]
members = [
    "examples/basic",
]

[workspace.dependencies]
deribit-fix=  { path = "." }
deribit-base = { path = "../deribit-base" }
#deribit-base = "0.1"
tokio = { version = "1.45", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
tokio-native-tls = "0.3"
native-tls = "0.2"
