[package]
name = "error_handling"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "error_handling"
path = "error_handling.rs"

[[bin]]
name = "reject_example"
path = "reject_example.rs"

[dependencies]
deribit-base = { workspace = true }
deribit-fix = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }