[package]
name = "position_management"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "position_management"
path = "position_management.rs"

[dependencies]
deribit-base = { workspace = true }
deribit-fix = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }